src/css/App.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

/*
 Dark (default) theme colors
 */
html {
    --background-primary-color: #1A1A1A;
    --background-secondary-color: #262626;

    --icon-primary-color: #FFFFFF;
    --icon-secondary-color: #999999;

    --text-primary-color: #FFFFFF;
    --text-secondary-color: #A6A6A6;
    --text-tertiary-color: #999999;

    --accent-color: #3484FC;

    overflow: hidden;
}

/*
 Light theme colors
 */
html[data-theme="light"] {
    --background-primary-color: #EEEEEE;
    --background-secondary-color: #FAFAFA;

    --icon-primary-color: #656565;
    --icon-secondary-color: #838383;

    --text-primary-color: #656565;
    --text-secondary-color: #A6A6A6;
    --text-tertiary-color: #838383;

    --accent-color: #ED7D64;
}

body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    overflow: hidden;

    * {
        font-family: 'Poppins', sans-serif;
    }

    svg:focus {
        outline: none;
    }
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: var(--accent-color);
    border-radius: 10px;
}

.AppContainer {
    display: grid;
    height: 100vh;
    width: 100%;
    grid-template-areas:
        "nav top top activity"
        "nav main main activity"
        "control control control control";
    grid-template-columns: auto 1fr;
    grid-template-rows: auto 1fr;
    user-select: none;
}

.MainView {
    grid-area: main;
    background-color: var(--background-secondary-color);
    overflow: auto;
    overflow-x: hidden;
}

.BasicButton {
    background-color: var(--background-primary-color);
    color: var(--text-primary-color);
    border: none;
    border-radius: 30px;
    padding: 10px;
    display: flex;
    align-items: center;
    gap: 5px;

    &:active {
        scale: 0.9;
    }
}

.DropdownContent {
    opacity: 1;
    height: 0;
    overflow: hidden;
    transform: translateY(20%);
    transition: all 0.1s ease-in-out;
    box-shadow: #00000070 0 0 10px 0;
    position: fixed;
    z-index: 100;
    min-width: 200px;

    * {
        color: var(--text-primary-color);
        padding: 12px 16px;
        text-decoration: none;
        display: block;
        background-color: var(--background-secondary-color);
        font-size: 15px;
        transition: all 0.2s ease-in-out;
    }

    *:hover {
        cursor: pointer;
        color: #fff;
        background-color: var(--accent-color);
    }
}

.show {
    opacity: 1;
    height: auto;
    transform: translateY(0);
    border: var(--accent-color) 1px solid;
}

.Alert {
    position: fixed;
    left: 50%;
    display: none;
    bottom: 120px;
    transform: translateX(-50%);
    padding: 10px;
    border-radius: 10px;
    background-color: var(--accent-color);
    color: var(--text-primary-color);

    .AlertContent {
        display: flex;
        align-items: center;
        gap: 10px;
    }

    svg {
        width: 20px;
        height: 20px;
    }

    p {
        margin: 0;
    }
}

.BasicModal_Backdrop {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #00000070;
    background-size: cover;
    z-index: 1000;
    display: none;
}

.BasicModal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 400px;
    height: auto;
    background-color: var(--background-secondary-color);
    border-radius: 10px;
    z-index: 1001;
    padding: 20px;
    box-shadow: #00000070 0 0 10px 0;
    animation: expand 0.2s ease-in-out forwards;

    h1 {
        margin: 0;
        font-size: 30px;
    }

    p {
        margin: 0;
    }

    input {
        padding: 10px;
        border-radius: 10px;
        border: transparent 2px solid;
        background-color: var(--background-primary-color);
        color: var(--text-primary-color);
        font-size: 15px;
        transition: all 0.2s ease-in-out;

        &:focus {
            outline: none;
            border: var(--accent-color) 2px solid;
        }
    }

    textarea {
        padding: 10px;
        border-radius: 10px;
        height: 100px;
        border: transparent 2px solid;
        background-color: var(--background-primary-color);
        color: var(--text-primary-color);
        font-size: 15px;
        transition: all 0.2s ease-in-out;
        resize: none;

        &:focus {
            outline: none;
            border: var(--accent-color) 2px solid;
        }
    }

    img {
        width: 100%;
        height: auto;
        border-radius: 10px;
    }
}

@keyframes expand {
    0% {
        scale: 0;
    }
    100% {
        scale: 1;
    }
}

.BasicModal_Submit {
    width: 100%;
    justify-content: center;
    border-radius: 10px;
    border: var(--accent-color) 2px solid;
    transition: all 0.2s ease-in-out;
    background-color: transparent;

    &:hover {
        background-color: var(--accent-color);
        color: white;
        cursor: pointer;
    }
}

.PlaylistCheckBoxModal {
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
}

.Key {
    margin-left: 10px;
    padding: 5px 10px 10px;
    border-radius: 10px;
    background-color: #161618;
    box-shadow: inset 0 -5px 0 #00000070;
    color: white;
    font-size: 15px;

    &:active {
        box-shadow: none;
        padding: 5px 10px;
    }
}

.AnimatedView {
    animation: slide-in 0.2s ease-out forwards;
}

@keyframes slide-in {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}

.empty {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
    font-size: 20px;
    gap: 20px;

    h1 {
        margin: 0;
        color: var(--text-secondary-color);
        font-size: 40px;
        font-weight: 500;
    }

    p {
        margin: 0;
        color: var(--text-secondary-color);
        font-size: 15px;
    }
}

.Tooltip {
    z-index: 1000;
}

